# 声明要求的cmake最低版本
cmake_minimum_required(VERSION 3.15)
# 声明一个cmake工程
project(.work)

# C++编译器
set(CMAKE_CXX_STANDARD 14)
# 可执行文件生成
#add_executable(study main.cpp)
add_executable(1_15_A codeforces/1_18_A.cpp)
add_executable(L1_001 PTA/L1_001.cpp)
add_executable(L1_002 PTA/L1_002.cpp)
add_executable(1_18_A codeforces/1_18_A.cpp)
add_executable(1_18_B codeforces/1_18_B.cpp)
add_executable(1_27_A codeforces/1_27_A.cpp)
add_executable(1_30_A codeforces/1_30_A.cpp)
add_executable(1_30_B codeforces/1_30_B.cpp)
add_executable(2_6_A codeforces/2_6_A.cpp)
add_executable(2_6_C codeforces/2_6_C.cpp)
add_executable(2_11_A codeforces/2_11_A.cpp)
add_executable(2_11_B codeforces/2_11_B.cpp)
add_executable(2_13_A codeforces/2_13_A.cpp)
add_executable(2_13_B codeforces/2_13_B.cpp)
add_executable(2_13_C codeforces/2_13_C.cpp)
add_executable(2_13_D codeforces/2_13_D.cpp)
add_executable(2_15_A codeforces/2_15_A.cpp)
add_executable(2_15_B codeforces/2_15_B.cpp)
add_executable(2_15_C codeforces/2_15_C.cpp)