# 声明要求的cmake最低版本
cmake_minimum_required(VERSION 3.15)
# 声明一个cmake工程
project(.work)

# C++编译器
set(CMAKE_CXX_STANDARD 14)
# 可执行文件生成
#add_executable(study main.cpp)
add_executable(1_15_A codeforces/1_18_A.cpp)
add_executable(L1_001 PTA/L1_001.cpp)
add_executable(L1_002 PTA/L1_002.cpp)
add_executable(1_18_A codeforces/1_18_A.cpp)
add_executable(1_18_B codeforces/1_18_B.cpp)
add_executable(1_27_A codeforces/1_27_A.cpp)
add_executable(1_30_A codeforces/1_30_A.cpp)
add_executable(1_30_B codeforces/1_30_B.cpp)
add_executable(2_6_A codeforces/2_6_A.cpp)
add_executable(2_6_C codeforces/2_6_C.cpp)
add_executable(2_11_A codeforces/2_11_A.cpp)
add_executable(2_11_B codeforces/2_11_B.cpp)
add_executable(2_13_A codeforces/2_13_A.cpp)
add_executable(2_13_B codeforces/2_13_B.cpp)
add_executable(2_13_C codeforces/2_13_C.cpp)
add_executable(2_13_D codeforces/2_13_D.cpp)
add_executable(2_15_A codeforces/2_15_A.cpp)
add_executable(2_15_B codeforces/2_15_B.cpp)
add_executable(2_15_C codeforces/2_15_C.cpp)
add_executable(2_18_A codeforces/2_18_A.cpp)
add_executable(2_18_B codeforces/2_18_B.cpp)
add_executable(2_18_C codeforces/2_18_C.cpp)
add_executable(flagB flagB.cpp)
add_executable(2_23_A codeforces/2_23_A.cpp)
add_executable(2_23_B codeforces/2_23_B.cpp)
add_executable(2_23_C codeforces/2_23_C.cpp)
add_executable(2_27_A codeforces/2_27_A.cpp)
add_executable(2_27_B codeforces/2_27_B.cpp)
add_executable(2_27_C codeforces/2_27_C.cpp)
add_executable(T2_29B codeforces/T2_29B.cpp)
add_executable(T2_29C codeforces/T2_29C.cpp)
add_executable(T2_29D codeforces/T2_29D.cpp)
add_executable(T2_29E codeforces/T2_29E.cpp)
add_executable(test codeforces/test.cpp)
add_executable(T2_29F codeforces/T2_29F.cpp)
add_executable(3_1_A codeforces/3_1_A.cpp)
add_executable(3_1_B codeforces/3_1_B.cpp)
add_executable(T_3_7_A codeforces/T_3_7_A.cpp)
add_executable(T_3_7_B codeforces/T_3_7_B.cpp)
add_executable(T_3_7_E codeforces/T_3_7_E.cpp)
add_executable(L1_003 PTA/L1_003.cpp)
add_executable(L1_004 PTA/L1_004.cpp)
add_executable(L1_005 PTA/L1_005.cpp)
add_executable(L1_006 PTA/L1_006.cpp)
add_executable(CrackMe CrackMe.cpp)
add_executable(T3_9_A codeforces/T3_9_A.cpp)
add_executable(T3_9_B codeforces/T3_9_B.cpp)