# 声明要求的cmake最低版本
cmake_minimum_required(VERSION 3.15)
# 声明一个cmake工程
project(.work)

# C++编译器
set(CMAKE_CXX_STANDARD 14)
# 可执行文件生成
#add_executable(study main.cpp)
add_executable(1_15_A codeforces/1_18_A.cpp)
add_executable(L1_001 PTA/L1_001.cpp)
add_executable(L1_002 PTA/L1_002.cpp)
add_executable(1_18_A codeforces/1_18_A.cpp)
add_executable(1_18_B codeforces/1_18_B.cpp)
add_executable(1_27_A codeforces/1_27_A.cpp)
add_executable(1_30_A codeforces/1_30_A.cpp)
add_executable(1_30_B codeforces/1_30_B.cpp)
add_executable(2_6_A codeforces/2_6_A.cpp)
add_executable(2_6_C codeforces/2_6_C.cpp)
add_executable(2_11_A codeforces/2_11_A.cpp)
add_executable(2_11_B codeforces/2_11_B.cpp)
add_executable(2_13_A codeforces/2_13_A.cpp)
add_executable(2_13_B codeforces/2_13_B.cpp)
add_executable(2_13_C codeforces/2_13_C.cpp)
add_executable(2_13_D codeforces/2_13_D.cpp)
add_executable(2_15_A codeforces/2_15_A.cpp)
add_executable(2_15_B codeforces/2_15_B.cpp)
add_executable(2_15_C codeforces/2_15_C.cpp)
add_executable(2_18_A codeforces/2_18_A.cpp)
add_executable(2_18_B codeforces/2_18_B.cpp)
add_executable(2_18_C codeforces/2_18_C.cpp)
add_executable(flagB flagB.cpp)
add_executable(2_23_A codeforces/2_23_A.cpp)
add_executable(2_23_B codeforces/2_23_B.cpp)
add_executable(2_23_C codeforces/2_23_C.cpp)
add_executable(2_27_A codeforces/2_27_A.cpp)
add_executable(2_27_B codeforces/2_27_B.cpp)
add_executable(2_27_C codeforces/2_27_C.cpp)
add_executable(T2_29B codeforces/T2_29B.cpp)
add_executable(T2_29C codeforces/T2_29C.cpp)
add_executable(T2_29D codeforces/T2_29D.cpp)
add_executable(T2_29E codeforces/T2_29E.cpp)
add_executable(test codeforces/test.cpp)
add_executable(T2_29F codeforces/T2_29F.cpp)
add_executable(3_1_A codeforces/3_1_A.cpp)
add_executable(3_1_B codeforces/3_1_B.cpp)
add_executable(T_3_7_A codeforces/T_3_7_A.cpp)
add_executable(T_3_7_B codeforces/T_3_7_B.cpp)
add_executable(T_3_7_E codeforces/T_3_7_E.cpp)
add_executable(L1_003 PTA/L1_003.cpp)
add_executable(L1_004 PTA/L1_004.cpp)
add_executable(L1_005 PTA/L1_005.cpp)
add_executable(L1_006 PTA/L1_006.cpp)
add_executable(CrackMe CrackMe.cpp)
add_executable(T3_9_A codeforces/T3_9_A.cpp)
add_executable(T3_9_B codeforces/T3_9_B.cpp)
add_executable(3_11_A codeforces/3_11_A.cpp)
add_executable(3_11_B codeforces/3_11_B.cpp)
add_executable(3_11_C codeforces/3_11_C.cpp)
add_executable(T3_12_A codeforces/T3_12_A.cpp)
add_executable(L1_007 PTA/L1_007.cpp)
add_executable(L1_008 PTA/L1_008.cpp)
add_executable(L1_010 PTA/L1_010.cpp)
add_executable(L1_011 PTA/L1_011.cpp)
add_executable(L1_012 PTA/L1_012.cpp)
add_executable(L1_013 PTA/L1_013.cpp)
add_executable(L1_014 PTA/L1_014.cpp)
add_executable(L1_015 PTA/L1_015.cpp)
add_executable(T3_14_A codeforces/T3_14_A.cpp)
add_executable(T3_14_D codeforces/T3_14_D.cpp)
add_executable(T3_14_E codeforces/T3_14_E.cpp)

add_executable(3_16_A AtCoder/3_16_A.cpp)
add_executable(3_17_A codeforces/3_17_A.cpp)
add_executable(L1_017 PTA/L1_017.cpp)
add_executable(L1_018 PTA/L1_018.cpp)
add_executable(L1_020 PTA/L1_020.cpp)
add_executable(L1_021 PTA/L1_021.cpp)
add_executable(L1_022 PTA/L1_022.cpp)
add_executable(L1_023 PTA/L1_023.cpp)
add_executable(L1_024 PTA/L1_024.cpp)
add_executable(L1_025 PTA/L1_025.cpp)
add_executable(L1_026 PTA/L1_026.cpp)
add_executable(L1_027 PTA/L1_027.cpp)
add_executable(L1_028 PTA/L1_028.cpp)
add_executable(L1_029 PTA/L1_029.cpp)
add_executable(L1_030 PTA/L1_030.cpp)
add_executable(3_21_A AtCoder/3_21_A.cpp)
add_executable(3_21_B AtCoder/3_21_B.cpp)
add_executable(3_22_A codeforces/3_22_A.cpp)
add_executable(3_22_B codeforces/3_22_B.cpp)
add_executable(L1_031 PTA/L1_031.cpp)
add_executable(L1_032 PTA/L1_032.cpp)
add_executable(L1_033 PTA/L1_033.cpp)
add_executable(L2_041 PTA/L2_041.cpp)
add_executable(L1_037 PTA/L2_037.cpp)
add_executable(L2_039 PTA/L2_039.cpp)
add_executable(3_28_D codeforces/3_28_D.cpp)
add_executable(4_1_A codeforces/4_1_A.cpp)
add_executable(4_1_B codeforces/4_1_B.cpp)
add_executable(4_1_C codeforces/4_1_C.cpp)
add_executable(4_1_G codeforces/4_1_G.cpp)
add_executable(4_6_A codeforces/4_6_A.cpp)
add_executable(4_6_B codeforces/4_6_B.cpp)
add_executable(4_8_A codeforces/4_8_A.cpp)
add_executable(4_8_B codeforces/4_8_B.cpp)
add_executable(4_8_C codeforces/4_8_C.cpp)
add_executable(T4_9_A codeforces/T4_9_A.cpp)
add_executable(T4_9_B codeforces/T4_9_B.cpp)
add_executable(T4_9_C codeforces/T4_9_C.cpp)
add_executable(T4_11_A codeforces/T4_11_A.cpp)
add_executable(T4_11_B codeforces/T4_11_B.cpp)
add_executable(4_13_A codeforces/4_13_A.cpp)
add_executable(4_13_B codeforces/4_13_B.cpp)
add_executable(T4_18_A codeforces/T4_18_A.cpp)
add_executable(T4_18_B codeforces/T4_18_B.cpp)
add_executable(T4_18_C codeforces/T4_18_C.cpp)
add_executable(T4_18_D codeforces/T4_18_D.cpp)
add_executable(T4_18_E codeforces/T4_18_E.cpp)
add_executable(T4_18_F codeforces/T4_18_F.cpp)
add_executable(4_19_A NowCoder/4_19_A.cpp)
add_executable(4_19_B NowCoder/4_19_B.cpp)
add_executable(4_19_C NowCoder/4_19_C.cpp)
add_executable(4_19_D codeforces/4_19_D.cpp)
add_executable(Warshall Warshall.cpp)
add_executable(T4_23_A codeforces/T4_23_A.cpp)
add_executable(T4_23_B codeforces/T4_23_B.cpp)
add_executable(T4_23_C codeforces/T4_23_C.cpp)
add_executable(T4_25_A codeforces/T4_25_A.cpp)
add_executable(T4_25_B codeforces/T4_25_B.cpp)
add_executable(4_26_A NowCoder/4_26_A.cpp)
add_executable(4_27_A codeforces/4_27_A.cpp)
add_executable(4_27_B codeforces/4_27_B.cpp)
add_executable(4_27_L NowCoder/4_27_L.cpp)
add_executable(4_27_C codeforces/4_27_C.cpp)

add_executable(4_28_A NowCoder/4_28_A.cpp)
add_executable(4_28_B NowCoder/4_28_B.cpp)
add_executable(4_28_C NowCoder/4_28_C.cpp)
add_executable(4_29_A codeforces/4_29_A.cpp)
add_executable(4_30_A codeforces/4_30_A.cpp)
add_executable(4_30_B codeforces/4_30_B.cpp)

add_executable(5_10_A NowCoder/5_10_A.cpp)
add_executable(5_10_B NowCoder/5_10_B.cpp)
add_executable(5_2_A AtCoder/5_2_A.cpp)
add_executable(5_2_B AtCoder/5_2_B.cpp)
add_executable(5_2_C AtCoder/5_2_C.cpp)
add_executable(5_2_D AtCoder/5_2_D.cpp)
add_executable(5_4_A AtCoder/5_4_A.cpp)
add_executable(5_4_B AtCoder/5_4_B.cpp)
add_executable(5_4_C AtCoder/5_4_C.cpp)
add_executable(T5_7_A codeforces/T5_7_A.cpp)
add_executable(T5_7_AA codeforces/T5_7_AA.cpp)
add_executable(T5_7_BB codeforces/T5_7_BB.cpp)
add_executable(T5_7_CC codeforces/T5_7_CC.cpp)
add_executable(T5_7_DD codeforces/T5_7_DD.cpp)
add_executable(T5_7_EE codeforces/T5_7_EE.cpp)
add_executable(T5_13_C codeforces/T5_13_C.cpp)
add_executable(T5_14_G codeforces/T5_14_G.cpp)
add_executable(T5_14_K codeforces/T5_14_K.cpp)